Increasing z-index to ensure it's above other elements on the page.

--- a/app/src/main/webapp/css/app.css
+++ b/app/src/main/webapp/css/app.css
@@ -12,7 +12,7 @@
     opacity: 0.5;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 100;
 }
 
 #logout {
